--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-audio-player": "^0.11.0",
     "animate.css": "^4.1.0",
     "axios": "^0.19.2",
     "bulma": "^0.9.0",
@@ -10,9 +11,11 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-animated-css": "^1.2.1",
+    "react-audio-player": "^0.13.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-sound": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
